--- a/GarphIt.web/wwwroot/css/site.css
+++ b/GarphIt.web/wwwroot/css/site.css
@@ -66,11 +66,11 @@ svg {
     text-align: center;
 }
 
-.multiline {
-    width: 100%;
+.font-small{
+    font-size: 10px;
 }
 
-.insert{
+.insert {
     cursor: copy;
 }
 .grab{
@@ -96,8 +96,16 @@ svg text {
     cursor: pointer;
 }
 
+.NavNone {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 .NavNone:hover {
     background-color: #ededed;
+    cursor: pointer;
 }
 
 .NavActive::after {
