--- a/GarphIt.web/Pages/AdjMatrix.razor
+++ b/GarphIt.web/Pages/AdjMatrix.razor
@@ -21,30 +21,20 @@
             }
             else if (TextView)
             {
-        <div class="multiline">
-            @if (GetInitText)
-            {
-                <SfTextBox Multiline="true" Placeholder="Add Nodes by typing 0, 1" Value="@GetText()" @onchange="OnChangeText">
+                <SfTextBox Multiline="true" Placeholder="Add Nodes by typing 0, 1" Value="@ShowText" @onchange="OnChangeText">
                 </SfTextBox>
-            }
-            else
-            {
-                <SfTextBox Multiline="true" Placeholder="Add Nodes by typing 0, 1" Value="@TextMatrix" @onchange="OnChangeText">
-                </SfTextBox>
-            }
-            @if (!ValidInput)
-            {
-                if (Rep == Representation.Matrix)
+                @if (!ValidInput)
                 {
-                    <div class="text-danger">There was formatting error: please input only a sqaure matrix of either 0, 1 comma seperated</div>
-                }
-                else
-                {
-                    <div class="text-danger">There was formatting error, please input only a square matrix of decimal numbers upto 2 decimal places, comma seperated</div>
-                }
+                    if (Rep == Representation.Matrix)
+                    {
+                        <div class="text-danger">There was formatting error: please input only a sqaure matrix of either 0, 1 comma seperated</div>
+                    }
+                    else
+                    {
+                        <div class="text-danger">There was formatting error, please input only a square matrix of decimal numbers upto 2 decimal places, comma seperated</div>
+                    }
 
-            }
-        </div>
+                }
             }
             else
             {
@@ -53,8 +43,8 @@
                         <thead>
                             <tr>
                                 <th scope="col">Node 
-                                <button type="button" class="btn btn-sm btn-success p-0" 
-                                        @onclick="(async() => { NodeService.AddNode(Nodes, DefaultOptions, 0, 0); await NodesChanged.InvokeAsync(Nodes); })">+</button></th>
+                                <button class="btn btn-sm font-small p-1 shadow-none btn-success oi oi-plus" 
+                                        @onclick="(async() => { NodeService.AddNode(Nodes, DefaultOptions, GetRandom(true), GetRandom(false)); await NodesChanged.InvokeAsync(Nodes); })"></button></th>
                                 @foreach (Node node in Nodes)
                                 {
                                     <th scope="col">@node.Label</th>
@@ -67,10 +57,7 @@
                             <tr>
                                 <th scope="row">
                                     @tail.Label
-                                    <button type="button" class="btn btn-sm btn-danger p-0"
-                                            @onclick="(async() => { NodeService.DeleteNode(Nodes, Edges, tail); await NodesChanged.InvokeAsync(Nodes); await EdgesChanged.InvokeAsync(Edges); })">
-                                        X
-                                    </button>
+                                    <button class="btn btn-sm font-small p-1 btn-danger shadow-none oi oi-trash" @onclick="() => OnTableDelete(tail)"></button>
                                 </th>
                                 @foreach (Node head in Nodes)
                                 {
@@ -122,7 +109,7 @@
         }
         else
         {
-            <DialogButton Content="Text View" OnClick="(() => { TextView = !TextView; GetInitText = true; })" />
+            <DialogButton Content="Text View" OnClick="(() => TextView = !TextView)" />
             <DialogButton Content="Close" OnClick="@CloseMatrix" />
         }
     </DialogButtons>
