--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -22,34 +22,36 @@ else
 
 @if (Choice != null)
 {
-    <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-        <ul class="navbar-nav mr-auto mx-0">
-            @switch (Choice)
-            {
-                case NavChoice.File:
-                    <File DefaultOptions="DefaultOptions" SVGControl="SVGControl" @bind-Nodes="Nodes" @bind-Edges="Edges"></File>
-                    break;
-                case NavChoice.Home:
-                    <Home @bind-Rep="Rep" @bind-StartAlgorithm="StartAlgorithm" @bind-ActiveNodes="ActiveNodes" @bind-ActiveEdges="ActiveEdges" Nodes="Nodes" Edges="Edges"></Home>
-                    break;
-                case NavChoice.Insert:
-                    <Insert @bind-GraphMode="GraphMode" DefaultOptions="DefaultOptions" @bind-Nodes="Nodes" @bind-Edges="Edges" SVGControl="SVGControl"></Insert>
-                    break;
-                case NavChoice.View:
-                    <View  @bind-SVGControl="SVGControl" Nodes="Nodes" Browser="Browser" ActiveNodes="ActiveNodes"></View>
-                    break;
-                case NavChoice.Node:
-                    <NodeOptions @bind-ActiveNodes="ActiveNodes" @bind-DefaultOptions="DefaultOptions" @bind-SVGControl="SVGControl" @bind-Nodes="Nodes"></NodeOptions>
-                    break;
-                case NavChoice.Edge:
-                    <EdgeOptions @bind-ActiveEdges="ActiveEdges" @bind-DefaultOptions="DefaultOptions"></EdgeOptions>
-                    break;
-                case NavChoice.About:
-                    break;
-            }
-        </ul>
-        <div class="navbar-text NavNone"><button class="btn shadow-none oi oi-x" @onclick="(() => Choice = null)"></button></div>
-    </nav>
+<nav class="navbar sticky-top navbar-expand navbar-custom p-0">
+    <ul class="navbar-nav mr-auto m-0">
+        @switch (Choice)
+        {
+            case NavChoice.File:
+                <File DefaultOptions="DefaultOptions" SVGControl="SVGControl" @bind-Nodes="Nodes" @bind-Edges="Edges"></File>
+                break;
+            case NavChoice.Home:
+                <Home @bind-Rep="Rep" @bind-StartAlgorithm="StartAlgorithm" @bind-ActiveNodes="ActiveNodes" @bind-ActiveEdges="ActiveEdges" Nodes="Nodes" Edges="Edges"></Home>
+                break;
+            case NavChoice.Insert:
+                <Insert @bind-GraphMode="GraphMode" DefaultOptions="DefaultOptions" @bind-Nodes="Nodes" @bind-Edges="Edges" SVGControl="SVGControl"></Insert>
+                break;
+            case NavChoice.View:
+                <View @bind-SVGControl="SVGControl" Nodes="Nodes" Browser="Browser" ActiveNodes="ActiveNodes"></View>
+                break;
+            case NavChoice.Node:
+                <NodeOptions @bind-ActiveNodes="ActiveNodes" @bind-DefaultOptions="DefaultOptions" @bind-Nodes="Nodes"></NodeOptions>
+                break;
+            case NavChoice.Edge:
+                <EdgeOptions @bind-ActiveEdges="ActiveEdges" @bind-DefaultOptions="DefaultOptions"></EdgeOptions>
+                break;
+            case NavChoice.About:
+                break;
+        }
+    </ul>
+    <ul class="navbar-nav m-0">
+        <li class="NavNone p-2" @onclick="(() => Choice = null)"><span class="oi oi-x"></span></li>
+    </ul>
+</nav>
 }
 @if (Rep == Representation.Matrix || Rep == Representation.WeightedMatrix)
 {
@@ -57,4 +59,4 @@ else
 }
 <Canvas @bind-ActiveNodes="ActiveNodes" @bind-Nodes="Nodes" @bind-ActiveEdges="ActiveEdges" @bind-Edges="Edges"
         ChangeMenu="UpdateChoice" DefaultOptions="DefaultOptions" GraphMode="GraphMode" @bind-SVGControl="SVGControl" @bind-StartAlgorithm="StartAlgorithm"></Canvas>
-<Footer GraphMode="GraphMode" DefaultOptions="DefaultOptions" Nodes="Nodes" Edges="Edges"></Footer>
+<Footer GraphMode="GraphMode" @bind-DefaultOptions="DefaultOptions" Nodes="Nodes" Edges="Edges"></Footer>
