--- a/GarphIt.web/Pages/NavBar.razor
+++ b/GarphIt.web/Pages/NavBar.razor
@@ -1,33 +1,21 @@
 ﻿@inherits NavBarBase
 
-<nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
-    <span class="navbar-brand logo-custom pl-2 pr-3 mx-0">GraphIt</span>
+<nav class="navbar sticky-top navbar-expand navbar-custom p-0">
+    <span class="navbar-brand logo-custom p-2 m-0">GraphIt</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse mx-0" id="navbarNav">
-        <ul class="navbar-nav mr-auto mx-0">
-            <li class="navbar-text @NavElements[(int)NavChoice.File]" @onclick="(() => Click(NavChoice.File))">
-                <button class="btn shadow-none oi oi-file">File</button>
-            </li>
-            <li class="navbar-text @NavElements[(int)NavChoice.Home]" @onclick="(() => Click(NavChoice.Home))">
-                <button class="btn shadow-none oi oi-home">Home</button>
-            </li>
-            <li class="navbar-text @NavElements[(int)NavChoice.Insert]" @onclick="(() => Click(NavChoice.Insert))">
-                <button class="btn shadow-none oi oi-plus">Insert</button>
-            </li>
-            <li class="navbar-text @NavElements[(int)NavChoice.View]" @onclick="(() => Click(NavChoice.View))">
-                <button class="btn shadow-none oi oi-magnifying-glass">View</button>
-            </li>
-            <li class="navbar-text @NavElements[(int)NavChoice.Node]" @onclick="(() => Click(NavChoice.Node))">
-                <button class="btn shadow-none oi oi-media-record">Node</button>
-            </li>
-            <li class="navbar-text @NavElements[(int)NavChoice.Edge]" @onclick="(() => Click(NavChoice.Edge))">
-                <button class="btn shadow-none oi oi-transfer">Edge</button>
-            </li>
+    <div class="collapse navbar-collapse m-0" id="navbarNav">
+        <ul class="navbar-nav mr-auto m-0">
+            <li class="@NavElements[(int)NavChoice.File] p-2" @onclick="(() => Click(NavChoice.File))"><span class="pr-1 oi oi-file"></span>File</li>
+            <li class="@NavElements[(int)NavChoice.Home] p-2" @onclick="(() => Click(NavChoice.Home))"><span class="pr-1 oi oi-home"></span>Home</li>
+            <li class="@NavElements[(int)NavChoice.Insert] p-2" @onclick="(() => Click(NavChoice.Insert))"><span class="pr-1 oi oi-plus"></span>Insert</li>
+            <li class="@NavElements[(int)NavChoice.View] p-2" @onclick="(() => Click(NavChoice.View))"><span class="pr-1 oi oi-magnifying-glass"></span>View</li>
+            <li class="@NavElements[(int)NavChoice.Node] p-2" @onclick="(() => Click(NavChoice.Node))"><span class="pr-1 oi oi-media-record"></span>Node</li>
+            <li class="@NavElements[(int)NavChoice.Edge] p-2" @onclick="(() => Click(NavChoice.Edge))"><span class="pr-1 oi oi-transfer"></span>Edge</li>
         </ul>
-        <span class="navbar-text @NavElements[(int)NavChoice.About]" @onclick="(() => Click(NavChoice.About))">
-            <button class="btn shadow-none oi oi-info"></button>
-        </span>
+        <ul class="navbar-nav m-0">
+            <li class="@NavElements[(int)NavChoice.About] p-2" @onclick="(() => Click(NavChoice.About))"><span class="oi oi-info"></span></li>
+        </ul>
     </div>
 </nav>
