--- a/GarphIt.web/wwwroot/css/site.css
+++ b/GarphIt.web/wwwroot/css/site.css
@@ -49,7 +49,7 @@ html, body {
 }
 
 .medInput {
-    max-width: 110px;
+    max-width: 105px;
 }
 
 svg {
@@ -103,6 +103,26 @@ svg text {
     -ms-user-select: none;
     user-select: none;
 }
+
+.NavActive {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.pr-custom{
+    padding-right:18px;
+}
+.pr-custom-1 {
+    padding-right: 10px;
+}
+.p-custom{
+    padding-left: 5px;
+    padding-top: 5px;
+}
+
 .NavNone:hover {
     background-color: #ededed;
     cursor: pointer;
@@ -115,6 +135,10 @@ svg text {
     margin: auto;
     border-top: 2px solid black;
 }
+.NavActive:hover {
+    cursor: pointer;
+}
+
 .NavActive:hover::after {
     content: '';
     display: inherit;
