modal design, search through nodes

--- a/GarphIt.web/Pages/AdjMatrix.razor
+++ b/GarphIt.web/Pages/AdjMatrix.razor
@@ -1,9 +1,9 @@
 ﻿@inherits AdjMatrixBase
 
-<SfDialog Target="#target" Width="400px" Height="400px" AllowDragging="true">
+<SfDialog Width="400px" Height="400px" AllowDragging="true">
     <DialogTemplates>
         <Header>
-            @if(Rep == Representation.Matrix)
+            @if (Rep == Representation.Matrix)
             {
                 @("Adjacency Matrix")
             }
