--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -36,7 +36,7 @@ else
                 <Insert @bind-GraphMode="GraphMode" DefaultOptions="DefaultOptions" @bind-Nodes="Nodes" @bind-Edges="Edges" SVGControl="SVGControl"></Insert>
                 break;
             case NavChoice.View:
-                <View @bind-SVGControl="SVGControl" Nodes="Nodes" Browser="Browser" ActiveNodes="ActiveNodes"></View>
+                <View @bind-SVGControl="SVGControl" @bind-ActiveNodes="ActiveNodes" Nodes="Nodes" Browser="Browser"></View>
                 break;
             case NavChoice.Node:
                 <NodeOptions @bind-ActiveNodes="ActiveNodes" @bind-DefaultOptions="DefaultOptions" @bind-Nodes="Nodes"></NodeOptions>
