--- a/GarphIt.web/Pages/Insert.razor
+++ b/GarphIt.web/Pages/Insert.razor
@@ -49,20 +49,36 @@ else
     <SfDialog Width="300px" IsModal="true">
         <DialogTemplates>
             <Content>
-                @Klabel
-                <SfNumericTextBox Min=1 Step=1 CssClass="shortInput" TValue="int?" @bind-Value="@numNodes"></SfNumericTextBox>
-                @if (WantedGraph == CommonGraph.CBipartite)
-                {
-                    @("Right Nodes: ")
-                    <SfNumericTextBox Min=1 Step=1 CssClass="shortInput" TValue="int?" @bind-Value="@KValue"></SfNumericTextBox>
-                }
-                else if (WantedGraph == CommonGraph.RBipartite)
-                {
-                    @("Degree (k): ")
-                    <SfNumericTextBox Min=1 Step=1 CssClass="shortInput" TValue="int?" @bind-Value="@KValue"></SfNumericTextBox>
-                }
-                <SfButton CssClass="e-success" @onclick="CreateGraph">Done</SfButton>
-                <SfButton CssClass="e-success" @onclick="(() => WantedGraph = null)">Cancel</SfButton>
+                <div class="container">
+                    <div class="row">
+                        <div class="col d-flex justify-content-center">
+                            @Klabel
+                            <SfNumericTextBox Min=1 Step=1 CssClass="shortInput shadow-none" TValue="int?" @bind-Value="@numNodes"></SfNumericTextBox>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col d-flex justify-content-center my-3 border-bottom border-dark">
+                            @if (WantedGraph == CommonGraph.CBipartite)
+                            {
+                                @("Right Nodes: ")
+                                <SfNumericTextBox Min=1 Step=1 CssClass="shortInput" TValue="int?" @bind-Value="@KValue"></SfNumericTextBox>
+                            }
+                            else if (WantedGraph == CommonGraph.RBipartite)
+                            {
+                                @("Degree (k): ")
+                                <SfNumericTextBox Min=1 Step=1 CssClass="shortInput" TValue="int?" @bind-Value="@KValue"></SfNumericTextBox>
+                            }
+                        </div>
+                    </div>
+                        <div class="d-flex align-items-baseline">
+                            <button class="btn btn-outline-success shadow-none btn-sm" @onclick="CreateGraph">
+                                Done
+                            </button>
+                            <button class="ml-auto btn btn-outline-dark shadow-none btn-sm" @onclick="(() => WantedGraph = null)">
+                                Cancel
+                            </button>
+                        </div>
+                    </div>
             </Content>
         </DialogTemplates>
     </SfDialog>
@@ -72,9 +88,19 @@ else
     <SfDialog Width="300px" IsModal="true">
         <DialogTemplates>
             <Content>
-                <div class="text-center">
-                    <p class="text-danger text-center">@ErrorCreatingGraph</p>
-                    <SfButton CssClass="e-success" @onclick='(() => ErrorCreatingGraph = "")'>OK</SfButton>
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col d-flex justify-content-center my-3 border-bottom border-dark">
+                            @ErrorCreatingGraph
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col d-flex justify-content-center">
+                            <button class="btn btn-outline-dark shadow-none btn-sm" @onclick='(() => ErrorCreatingGraph = "")'>
+                                OK
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </Content>
         </DialogTemplates>
